--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
         function initViz() {
             var containerDiv = document.getElementById("vizContainer"),
-                url = "https://public.tableau.com/profile/rcalloni#!/vizhome/Knowledge_0/KnowledgeAnalytics",
+                url = "https://public.tableau.com/views/Knowledge_0/KnowledgeAnalytics?:embed=y&:display_count=yes&:toolbar=no",
                 options = {
                     hideTabs: true,
                     onFirstInteractive: function () {
