--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@ body {background-color: #121f3d;}
     </script>
 </head>
 <body onload="initViz();">
+
     <center>
-     <div id="vizContainer"></div>
+     <div id="vizContainer" width="100%"></div>
     </center>
+
 </body>
 
 </html>
