--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body {background-color: #121f3d;}
 <body onload="initViz();">
 
     <center>
-     <div id="vizContainer" stype="width=100%; height:3569px;"></div>
+     <div id="vizContainer" style="width=100%; height:3569px;"></div>
     </center>
 
 </body>
