--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {background-color: #121f3d;}
                         console.log("Run this code when the viz has finished loading.");
                     }
                 };
-              containerDiv.setAttribute("style","width:100%");
+              containerDiv.setAttribute("style","width:320px");
             }
             else if(screen.width<999)
             {
@@ -53,7 +53,7 @@ body {background-color: #121f3d;}
 </head>
 <body onload="initViz();">
 
-    <center>
+    <center>                
      <div id="vizContainer" style="width:100%; height:3569px;"></div>
     </center>
 
