--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {background-color: #121f3d;}
                         console.log("Run this code when the viz has finished loading.");
                     }
                 };
-              containerDiv.setAttribute("style","width:320px");
+              containerDiv.setAttribute("style","border:none");
             }
             else if(screen.width<999)
             {
@@ -31,7 +31,7 @@ body {background-color: #121f3d;}
                         console.log("Run this code when the viz has finished loading.");
                     }
                 };
-                containerDiv.setAttribute("style","width:100%");
+                containerDiv.setAttribute("style","border:none");
             }
             else
             {
