--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@ body {background-color: #121f3d;}
                 options = {
                     hideTabs: true,
                     hideToolbar: true,
-                    width: containerDiv.offsetWidth,
-                     height: containerDiv.offsetHeight,
+                    width: 100%,
                     onFirstInteractive: function () {
                         console.log("Run this code when the viz has finished loading.");
                     }
