--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {background-color: #121f3d;}
                 options = {
                     hideTabs: true,
                     hideToolbar: true,
-                    width: 100%,
+                    width: screen.width,
                     onFirstInteractive: function () {
                         console.log("Run this code when the viz has finished loading.");
                     }
