--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {background-color: #121f3d;}
             if(screen.width<763)
             {
                 var containerDiv = document.getElementById("vizContainer"),
-                url = "https://public.tableau.com/views/IDBKnowledgeAnalyticsPhone/KnowledgeAnalytics?:embed=y&:display_count=yes",
+                url = "https://public.tableau.com/views/IDBKnowledgeAnalyticsPhone/KnowledgeAnalytics",
                 options = {
                     hideTabs: true,
                     hideToolbar: true,
@@ -29,7 +29,7 @@ body {background-color: #121f3d;}
             else if(screen.width<999)
             {
                 var containerDiv = document.getElementById("vizContainer"),
-                url = "https://public.tableau.com/views/IDBKnowledgeAnalyticsTablet/KnowledgeAnalytics?:embed=y&:display_count=yes",
+                url = "https://public.tableau.com/views/IDBKnowledgeAnalyticsTablet/KnowledgeAnalytics",
                 options = {
                     hideTabs: true,
                     onFirstInteractive: function () {
@@ -41,7 +41,7 @@ body {background-color: #121f3d;}
             else
             {
                 var containerDiv = document.getElementById("vizContainer"),
-                url = "https://public.tableau.com/views/Knowledge_0/KnowledgeAnalytics?:embed=y&:display_count=yes&:toolbar=no",
+                url = "https://public.tableau.com/views/Knowledge_0/KnowledgeAnalytics",
                 options = {
                     hideTabs: true,
                     onFirstInteractive: function () {
