--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {background-color: #121f3d;}
 <body onload="initViz();">
 
     <center>                
-     <div id="vizContainer"></div>
+     <div id="vizContainer" style="width:100%;"></div>
     </center>
 
 </body>
