--- a/index.html
+++ b/index.html
@@ -56,10 +56,30 @@ body {background-color: #121f3d;}
         }
     </script>
 </head>
-<body onload="initViz();">
-    <center>                
-     <div id="vizContainer" style="width:340px; height:3569px;"></div>
-    </center>
+<body>
+
+    <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
+
+    <div class='tableauPlaceholder' style='width: 374px; height: 3569px;'>
+        <noscript>
+            <a href='#'>
+            <img alt='Knowledge Analytics ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ID&#47;IDBKnowledgeAnalyticsPhone&#47;KnowledgeAnalytics&#47;1_rss.png' style='border: none' />
+            </a>
+        </noscript>
+        <object class='tableauViz' width='374' height='3569' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+            <param name='site_root' value='' />
+            <param name='name' value='IDBKnowledgeAnalyticsPhone&#47;KnowledgeAnalytics' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ID&#47;IDBKnowledgeAnalyticsPhone&#47;KnowledgeAnalytics&#47;1.png' /> <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+        </object>
+    </div>
+
 </body>
 
 </html>
