--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body {background-color: #121f3d;}
 </style>
 <head>
        <script type="text/javascript" 
-        src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
+        src="https://public.tableau.com/javascripts/api/tableau-2.js"></script>
         <script type="text/javascript">
            var viz;
         function initViz() {
@@ -67,7 +67,7 @@ body {background-color: #121f3d;}
             <img alt='Knowledge Analytics ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ID&#47;IDBKnowledgeAnalyticsPhone&#47;KnowledgeAnalytics&#47;1_rss.png' style='border: none' />
             </a>
         </noscript>
-        <object class='tableauViz' width='100%' height='3569' style='display:none;'>
+        <object class='tableauViz' width='100%' height='3569' style='display:none; border:none'>
             <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
             <param name='site_root' value='' />
             <param name='name' value='IDBKnowledgeAnalyticsPhone&#47;KnowledgeAnalytics' />
