Test Rodrigo version 9

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body {background-color: #121f3d;}
         }
     </script>
 </head>
-<body>
+<body onload="initViz();">
     <center>                         +
         <div id="vizContainer" style="width:100%; height:3569px;"></div> 
     </center> 
