Test Rodrigo version 11

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body {background-color: #121f3d;}
     </script>
 </head>
 <body onload="initViz();">
-    <center>                         +
+    <center>
         <div id="vizContainer" style="width:100%; height:3569px;"></div> 
     </center> 
 
